Dimensions in feet and inches use correct typographic characters. [#25 state:resolved]

--- a/test/basic.yml
+++ b/test/basic.yml
@@ -166,13 +166,13 @@ in: "Observe: 2x3x4."
 html: "<p>Observe: 2&#215;3&#215;4.</p>"
 lite_mode_html: "Observe: 2&#215;3&#215;4."
 --- 
-name: dimension sign with double quotes
+name: dimension signs with double primes
 in: 'My mouse: 2.5" x 4".'
-html: '<p>My mouse: 2.5&quot; &#215; 4&quot;.</p>'
+html: '<p>My mouse: 2.5&#8243; &#215; 4&#8243;.</p>'
 --- 
-name: dimension sign with single quotes
+name: dimension signs with single primes
 in: "My office: 5' x 4.5'."
-html: "<p>My office: 5&#8217; &#215; 4.5&#8217;.</p>"
+html: "<p>My office: 5&#8242; &#215; 4.5&#8242;.</p>"
 --- 
 name: trademark and copyright
 desc: Conversion of trademark and copyright symbols.
