--- a/test/links.yml
+++ b/test/links.yml
@@ -221,3 +221,11 @@ name: quotes and follow link
 in: 'Some "text" followed by a "link":http://redcloth.org.'
 html: '<p>Some &#8220;text&#8221; followed by a <a href="http://redcloth.org">link</a>.</p>'
 lite_mode_html: 'Some &#8220;text&#8221; followed by a <a href="http://redcloth.org">link</a>.'
+---
+name: link alias containing dashes
+in: |-
+  "link":google-rocks
+  
+  [google-rocks]http://google.com
+html: |-
+  <p><a href="http://google.com">link</a></p>
