--- a/test/images.yml
+++ b/test/images.yml
@@ -1,12 +1,27 @@
 ---
 in:  This is an !image.jpg!
 html: <p>This is an <img src="image.jpg" alt="" /></p>
+latex: |+
+  This is an \begin{figure}[htp]
+    \includegraphics[]{image.jpg}
+  \end{figure}
+
 ---
 in:  This is an !image.jpg(with alt text)!
 html: <p>This is an <img src="image.jpg" title="with alt text" alt="with alt text" /></p>
+latex: |+
+  This is an \begin{figure}[htp]
+    \includegraphics[]{image.jpg}
+    \caption{with alt text}
+  \end{figure}
+
 ---
 in:  This is an !http://example.com/i/image.jpg!
 html: <p>This is an <img src="http://example.com/i/image.jpg" alt="" /></p>
+# Note that we are removing remote links fro security reasons for now
+latex: |+
+  This is an 
+
 ---
 in:  This is an !http://example.com/i/image.jpg#a1!
 html: <p>This is an <img src="http://example.com/i/image.jpg#a1" alt="" /></p>
@@ -176,6 +191,11 @@ html: <p>(This is an <a href="http://example.com/index.html?foo=bar&amp;a=b#a10"
 name: image with relative src with dot
 in: "!../../image.jpg!"
 html: <p><img src="../../image.jpg" alt="" /></p>
+latex: |+
+  \begin{figure}[htp]
+    \includegraphics[]{../../image.jpg}
+  \end{figure}
+
 ---
 name: image with class
 in: "!(myclass)image.jpg!"
@@ -204,10 +224,22 @@ html: <p><img src="image.jpg" style="color:red;" alt="" /></p>
 name: image attributes has ampersand html entity in alt and title
 in: "!/pictures/cat_and_fox.jpg(Trady Blix & The cartoon fox)!"
 html: '<p><img src="/pictures/cat_and_fox.jpg" title="Trady Blix &amp; The cartoon fox" alt="Trady Blix &amp; The cartoon fox" /></p>'
+latex: |+
+  \begin{figure}[htp]
+    \includegraphics[]{/pictures/cat_and_fox.jpg}
+    \caption{Trady Blix \& The cartoon fox}
+  \end{figure}
+
 ---
 name: image attributes has double quote html entity in alt and title
 in: '!/pictures/bacon.jpg(The fox said: "Have some chunky bacon")!'
 html: '<p><img src="/pictures/bacon.jpg" title="The fox said: &quot;Have some chunky bacon&quot;" alt="The fox said: &quot;Have some chunky bacon&quot;" /></p>'
+latex: |+
+  \begin{figure}[htp]
+    \includegraphics[]{/pictures/bacon.jpg}
+    \caption{The fox said: "Have some chunky bacon"}
+  \end{figure}
+
 ---
 name: image attributes has single quote html entity in alt and title
 in: "!/pictures/bacon.jpg(The fox said: 'Have some chunky bacon')!"
