Don't allow square brackets inside lang attribute so double square brackets are interpreted like Textile 2 and RedCloth 3. [#101 state:resolved]

--- a/test/basic.yml
+++ b/test/basic.yml
@@ -916,3 +916,7 @@ html: |-
   <p>Just some <em>_</em> text</p>
   <hr />
   <p>Some more text.</p>
+---
+name: lang attribute cannot contain square brackets
+in: "some @[[code]]@"
+html: "<p>some <code>[[code]]</code></p>"
