Fix inline <notextile> being recognized as block <notextile>. [#81 state:resolved]
This also changes the behavior of unclosed notextile tags.  They are no longer recognized

--- a/test/code.yml
+++ b/test/code.yml
@@ -96,7 +96,10 @@ in: |-
   <notextile>
   # *test*
 html: |-
-  # *test*
+  <p><notextile></p>
+  <ol>
+  	<li><strong>test</strong></li>
+  </ol>
 valid_html: false
 ---
 name: unfinished script tag
