To add LaTeX table test.
Signed-off-by: Bil Kleb <Bil.Kleb@nasa.gov>

--- a/test/textism.yml
+++ b/test/textism.yml
@@ -203,6 +203,11 @@ html: |-
   		<td>row</td>
   	</tr>
   </table>
+latex: |
+  \begin{tabular}{ l l l l l }
+    This & is & a & simple & table \\
+    This & is & a & simple & row \\
+  \end{tabular}
 ---
 in: |-
   table{border:1px solid black}.
