To allow float placement to be specified by the enclosing environment, i.e., to leave it as a document design decision, removed float placement specifiers.

--- a/test/table.yml
+++ b/test/table.yml
@@ -19,7 +19,7 @@ html: |-
   </table>
   <h3>A header after the table</h3>
 latex: |+
-  \begin{table}[htbp]
+  \begin{table}
     \begin{tabular}{ l l l }
       a & b & c \\
       1 & 2 & 3 \\
@@ -66,7 +66,7 @@ html: |-
   	</tr>
   </table>
 latex: |+
-  \begin{table}[htbp]
+  \begin{table}
     \begin{tabular}{ l l l l l }
       This & is & a & simple & table \\
       This & is & a & simple & row \\
@@ -187,7 +187,7 @@ html: |-
   	</tr>
   </table>
 latex: |+
-  \begin{table}[htbp]
+  \begin{table}
     \begin{tabular}{ l l }
       Cell with gray background & Normal cell \\
       \multicolumn{2}{ l l }{Cell spanning 2 columns} \\
@@ -231,7 +231,7 @@ html: |-
   	</tr>
   </table>
 latex: |+
-  \begin{table}[htbp]
+  \begin{table}
     \begin{tabular}{ l l l }
       1 & 2 & 3 \\
       1 & \multirow{3}{*}{2} & 3 \\
