To add \centering to LaTeX float environments.

--- a/test/images.yml
+++ b/test/images.yml
@@ -3,6 +3,7 @@ in:  This is an !image.jpg!
 html: <p>This is an <img src="image.jpg" alt="" /></p>
 latex: |+
   This is an \begin{figure}
+    \centering
     \includegraphics[]{image.jpg}
   \end{figure}
 
@@ -11,6 +12,7 @@ in:  This is an !image.jpg(with alt text)!
 html: <p>This is an <img src="image.jpg" title="with alt text" alt="with alt text" /></p>
 latex: |+
   This is an \begin{figure}
+    \centering
     \includegraphics[]{image.jpg}
     \caption{with alt text}
   \end{figure}
@@ -193,6 +195,7 @@ in: "!../../image.jpg!"
 html: <p><img src="../../image.jpg" alt="" /></p>
 latex: |+
   \begin{figure}
+    \centering
     \includegraphics[]{../../image.jpg}
   \end{figure}
 
@@ -226,6 +229,7 @@ in: "!/pictures/cat_and_fox.jpg(Trady Blix & The cartoon fox)!"
 html: '<p><img src="/pictures/cat_and_fox.jpg" title="Trady Blix &amp; The cartoon fox" alt="Trady Blix &amp; The cartoon fox" /></p>'
 latex: |+
   \begin{figure}
+    \centering
     \includegraphics[]{/pictures/cat_and_fox.jpg}
     \caption{Trady Blix \& The cartoon fox}
   \end{figure}
@@ -236,6 +240,7 @@ in: '!/pictures/bacon.jpg(The fox said: "Have some chunky bacon")!'
 html: '<p><img src="/pictures/bacon.jpg" title="The fox said: &quot;Have some chunky bacon&quot;" alt="The fox said: &quot;Have some chunky bacon&quot;" /></p>'
 latex: |+
   \begin{figure}
+    \centering
     \includegraphics[]{/pictures/bacon.jpg}
     \caption{The fox said: "Have some chunky bacon"}
   \end{figure}
