To accommodate non-Computer Modern LaTeX fonts.
Updated LaTeX super/subscript translation per "LaTeX 2ε
for Authors," http://www.latex-project.org/guides/usrguide.pdf,

  New feature 1995/06/01

  In LaTeX 2.09 textual superscripts such as footnote markers were produced
  by internally entering math mode and typesetting the number as a math
  superscript. This normally looked fine since the digits in math fonts
  are the same as those in text fonts when Computer Modern fonts are used.
  But when a different document font (such as Times) is selected, the
  results look rather strange. For this reason the command \textsuperscript
  has been introduced which typesets its argument in the current text font,
  in a superscript position and in the correct size.

--- a/test/textism.yml
+++ b/test/textism.yml
@@ -144,10 +144,11 @@ latex: "\\underline{a phrase}\n\n"
 ---
 in: ^a phrase^
 html: <p><sup>a phrase</sup></p>
-latex: "\\ensuremath{^\\textrm{a phrase}}\n\n"
+latex: "\\textsuperscript{a phrase}\n\n"
 ---
 in: ~a phrase~
 html: <p><sub>a phrase</sub></p>
+latex: "\\textsubscript{a phrase}\n\n"
 ---
 in: %(myclass)SPAN%
 html: <p><span class="myclass"><span class="caps">SPAN</span></span></p>
