Allow HTML tags with quoted attributes to be inside link text.
To do this, I had to remove the possibility that attributes in HTML tags could have spaces around the equals sign or unquoted attributes.  This change also greatly expands the complexity of the state machine, so compilation takes a long time. Sorry.

--- a/test/links.yml
+++ b/test/links.yml
@@ -283,3 +283,9 @@ in: |-
   "British Skin Foundation (BSF)":http://www.britishskinfoundation.org.uk
 html: |-
   <p><a href="http://www.britishskinfoundation.org.uk" title="BSF">British Skin Foundation</a></p>
+---
+name: containing HTML tags with quotes
+in: |-
+  "<r:attachment:image name="checkmark.gif" alt="Apply online" />*apply online*":/admissions/apply/
+html: |-
+  <p><a href="/admissions/apply/"><r:attachment:image name="checkmark.gif" alt="Apply online" /><strong>apply online</strong></a></p>
